# llm-arena

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile
backend/fastapi-backend/: main.py  pyproject.toml
backend/fastapi_backend/: .env  .env.example  azure_factory.py  config.py  main.py  models.py  pyproject.toml  requirements.txt
backend/fastapi_backend/config/: config.py
backend/fastapi_backend/schemas/: schemas.py
backend/fastapi_backend/services/: azure.py  azure_factory.py  scores.py
backend/fastapi_backend/utils/: logger.py
backend/fastapi_backend/v1/: router.py
backend/fastapi_backend/v1/endpoints/: chats.py  models.py  scores.py
frontend/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/board/: page.tsx
frontend/src/components/: feedback.tsx  model-container.tsx  model-placeholder.tsx  navigation.tsx  prompt.tsx  providers.tsx  result.tsx
frontend/src/lib/: fetch-llms.ts
